5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1582_579.log
== TEST (2019-04-05 14:01:04) 
-- CODE:
print(¨A UFAM tem¨,2016-1909,¨anos de fundacao.¨)
-- ERROR:
File "XXXX", line 1
    print(¨A UFAM tem¨,2016-1909,¨anos de fundacao.¨)
           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 14:02:22) 
-- CODE:
print("A UFAM tem",2016-1909,"anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 14:02:41) 
-- CODE:
print("A UFAM tem",2016-1909,"anos de fundacao.")
-- EXECUTION TIME:
0.200752
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
